# recognizer

./: .build.cmd  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  recognizer-build-settings.vcxproj  recognizer.props  recognizer.sln
.build/: .build.cmd  .gitignore  appveyor.yml
cmake/: Configure.cmake  FindTesseract.cmake  SourceGroups.cmake
docs/: APIExample · tesseract-ocr_tesseract Wiki.html
docs/APIExample · tesseract-ocr_tesseract Wiki_files/: 577872
java/: .gitignore  pom.xml
java/src/main/java/ru/voskhod/tesseract/rest/: Client.java  ClientImpl.java  PutResult.java
java/src/main/resources/: rest.properties
java/src/test/java/ru/voskhod/tesseract/rest/: ClientImplTest.java
recognizer/: main.cpp  recognizer.sln  recognizer.vcxproj
recogviewer/: main.cpp  recogviewer.rc  recogviewer.vcxproj  resource.h
restserver/: recognizer.cpp  restserver.vcxproj  start.cpp
utils/: CMakeLists.txt  hget.c  hget.cpp
